Solve table width on mobile device attempt 1

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -401,6 +401,10 @@ table {
     height: 40px;
     width: auto;
   }
+  table {
+    width: 300px;
+    font-size: 15px;
+  }
 }
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
