--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,10 @@ table {
     height: 40px;
     width: auto;
   }
+  table {
+    width: 475px;
+    font-size: 16px;
+  }
 }
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
